# api/controllers/config.js
@@ -20,6 +20,7 @@ var PUBLIC_KEYS = [
   'ANALYTICS_DEBUG',
   'ANALYTICS_ENHANCED_TRACKING',
   'ANALYTICS_TRAFFIC_TRACKING',
+  'APPINSIGHTS_CONNECTION_STRING',
   'SURVEY_URL',
   'SHOW_SURVEY_BANNER',
   'ACCESS_GATE'
